fixed position on mobile

--- a/stlye.css
+++ b/stlye.css
@@ -36,7 +36,7 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
-  padding: 2rem;
+  padding-top: 2rem;
   color: white;
 }
 .attribution a {
@@ -175,13 +175,18 @@ img {
 }
 
 @media screen and (max-width: 480px) {
+  body {
+    display: flow-root;
+  }
   .container {
     flex-wrap: wrap-reverse;
     height: 66rem;
-    margin-top: 100px;
     align-content: space-between;
     justify-content: center;
     width: 30rem;
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
   }
   .imagen-container {
     height: 30%;
@@ -217,8 +222,7 @@ img {
   h1 {
     font-size: 2.8rem;
     text-align: center;
-    padding: 0;
-    margin: 1.7rem 0;
+    padding: 1.7rem 0;
   }
 
   .stat {
